--- a/_posts/2019-11-28-a-test.markdown
+++ b/_posts/2019-11-28-a-test.markdown
@@ -1,13 +1,14 @@
+---
 layout: post
 
 title:  "A Test"
 
 date:  2017-11-28 19:02:00
 
-img:  1/first.png
+img:  first.png
 
 description:  搭建完github page，测试一下
-
+---
 
 
 今天周四，是2019年感恩节
